--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <section class="hero-text-box">
             <h1 class="hero-heading">Its me!!!</h1>
-            <p class="hero-text">Dont go onto the desktop though, There’s Too Much of me</p>
+            <p class="hero-text">I do art and stuff</p>
             <p><button class="hero-button">View Portfolio</button></p>
         </section>
     </header>
