Added some text in the about and shop sections

--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
     <main class="shop-page">
         <section class="text-box">
             <h1>Shop</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur soluta sint, voluptatem eaque a itaque molestiae cupiditate perferendis eveniet eligendi dignissimos exercitationem ad delectus libero!</p>
+            <p>Welcome to my shop, its not a lot at the moment, a good bit of things i would like to change but more things will be added soon!! </p>
         </section>
         <section class="shop-box">
             <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
