--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 
     <main class="aboout-page">
         <section class="about-text">
-            <h1>Kalab Bumbaugh does art and likes sports</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse consequuntur optio, qui quidem inventore at distinctio. Com corrupti qui nisi accusantium repellendus id at necessitatibus eaque pariatur, illum tempora atque porro animi dolorum fuga veniam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate harum, debitis aliquam, qui, sapiente alias officia ea et necessitatibus temporibus eveniet maiores fuga!</p>
+            <h1>About Kalab Bumbaugh (Me)</h1>
+            <p>Born and raised in the DMV, for most of my life I thought I wanted to be a soccer player, but stuff happened, injuries and just lost interest in playing, I doodled here and there throughout my life but didn't see art as a passion until the end of sophomore year and beginning junior year.</p>
+            <p>Art then became an outlet for me to express myself, and it just made me happy. That's when I realized that Art was something I wanted to pursue for the rest of my life. Now I'm a student at CIA just trying to get better at art and make people happy in any way I can.</p>
         </section>
         <section class="about-social">
             <a href="https://twitter.com/Kalab_Bumbaugh" aria-label="Link to Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
