fixed portfolio link and changed shop

--- a/shop.html
+++ b/shop.html
@@ -24,12 +24,12 @@
     <main class="shop-page">
         <section class="text-box">
             <h1>Shop</h1>
-            <p>Welcome to my shop, its not a lot at the moment, a good bit of things i would like to change but more things will be added soon!! </p>
+            <p>Welcome to my shop, its not a lot at the moment, a good bit of things I would like to change but more things will be added soon!! </p>
         </section>
-        <section class="shop-box">
+        <!-- <section class="shop-box">
             <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
             <script id="rb-xzfcxvzx" type="text/javascript">new RBExternalPortfolio('www.redbubble.com', 'kalabb', 3, 4).renderIframe();</script>
-        </section>
+        </section> -->
         <section class="curated-shop">
             <div class="shop-item">
                 <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u"><img src="img/work-62840170-art-print.jpg" alt="Art print of gettin ready Illustration "></a>
@@ -38,16 +38,16 @@
                 <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u">Buy Now</a>
             </div>
             <div class="shop-item">
-                <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u"><img src="img/work-62840170-art-print.jpg" alt="Art print of gettin ready Illustration "></a>
-                <h2>Gettin Ready Print</h2>
-                <p>This gettin ready print can motivate you to get ready</p>
-                <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u">Buy Now</a>
+                <a href="https://www.redbubble.com/i/magnet/Home-by-KalabB/62884939.TBCTK?asc=u"><img src="img/work-62884939-magnet.jpg" alt="Ethiopia is home magnet"></a>
+                <h2>Ethiopia is home magnet</h2>
+                <p>Spruce up your fridge with an Ethiopia magnet</p>
+                <a href="https://www.redbubble.com/i/magnet/Home-by-KalabB/62884939.TBCTK?asc=u">Buy Now</a>
             </div>
             <div class="shop-item">
-                <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u"><img src="img/work-62840170-art-print.jpg" alt="Art print of gettin ready Illustration "></a>
-                <h2>Gettin Ready Print</h2>
-                <p>This gettin ready print can motivate you to get ready</p>
-                <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u">Buy Now</a>
+                <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u"><img src="img/work-62884939-active-t-shirt.jpg" alt="Art print of gettin ready Illustration "></a>
+                <h2>Ethiopia is home active t-shirts</h2>
+                <p>Exersise in your very own Ethiopia is Home t-shirt</p>
+                <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u">Buy Now</a>
             </div>
             <div class="shop-item">
                 <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u"><img src="img/work-62840170-art-print.jpg" alt="Art print of gettin ready Illustration "></a>
