--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <section class="hero-text-box">
             <h1 class="hero-heading">Its me!!!</h1>
             <p class="hero-text">I do art and stuff</p>
-            <p><button class="hero-button">View Portfolio</button></p>
+            <!-- <p><button class="hero-button">View Portfolio</button></p> -->
+            <p><button class="hero-button" onclick="window.location.href = 'portfolio.html';">View Portfilio</button></p>
         </section>
     </header>
     <footer>
