--- a/shop.html
+++ b/shop.html
@@ -39,13 +39,13 @@
             </div>
             <div class="shop-item">
                 <a href="https://www.redbubble.com/i/magnet/Home-by-KalabB/62884939.TBCTK?asc=u"><img src="img/work-62884939-magnet.jpg" alt="Ethiopia is home magnet"></a>
-                <h2>Ethiopia is home magnet</h2>
+                <h2>Ethiopia is Home magnet</h2>
                 <p>Spruce up your fridge with an Ethiopia magnet</p>
                 <a href="https://www.redbubble.com/i/magnet/Home-by-KalabB/62884939.TBCTK?asc=u">Buy Now</a>
             </div>
             <div class="shop-item">
                 <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u"><img src="img/work-62884939-active-t-shirt.jpg" alt="Art print of gettin ready Illustration "></a>
-                <h2>Ethiopia is home active t-shirts</h2>
+                <h2>Ethiopia is Home active t-shirts</h2>
                 <p>Exersise in your very own Ethiopia is Home t-shirt</p>
                 <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u">Buy Now</a>
             </div>
