added images and changed shop items

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,9 @@
             <div class="gallery-item h-2">
                 <a href="img/KalabBumbaughAnimPose6.png" class="glightbox"><img src="img/KalabBumbaughAnimPose6.png" alt="Final animation pose" title="Animation pose project #6" class="gallery-img"></a>
             </div>
+            <div class="gallery-item w-6">
+                <a href="img/KillerKarpNum2.png" class="glightbox"><img src="img/KillerKarpNum2.png" alt="Magikarp and killer Bee mix" title="Combination of Killer Bee from naruto and Magikarp from Pokemon" class="gallery-img"></a>
+            </div>
         </section>
     </main>
 
