--- a/shop.html
+++ b/shop.html
@@ -50,10 +50,10 @@
                 <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u">Buy Now</a>
             </div>
             <div class="shop-item">
-                <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u"><img src="img/work-62840170-art-print.jpg" alt="Art print of gettin ready Illustration "></a>
-                <h2>Gettin Ready Print</h2>
-                <p>This gettin ready print can motivate you to get ready</p>
-                <a href="https://www.redbubble.com/i/art-print/Gettin-Ready-by-KalabB/62840170.1G4ZT?asc=u">Buy Now</a>
+                <a href="https://www.redbubble.com/i/magnet/Killer-Karp-by-KalabB/62894525.TBCTK?asc=u"><img src="img/work-62894525-magnet.jpg" alt="Magnet of Killer Karp"></a>
+                <h2>Killer Karp</h2>
+                <p>Spruce up your fridge with a Killer Karp Magnet</p>
+                <a href="https://www.redbubble.com/i/magnet/Killer-Karp-by-KalabB/62894525.TBCTK?asc=u">Buy Now</a>
             </div>
         </section>
     </main>
