--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <main class="aboout-page">
         <section class="about-text">
             <h1>About Kalab Bumbaugh (Me)</h1>
-            <p>Was born and raised in the DMV for all of my life and thought I wanted to be a soccer player. Then stuff happened, injuries, and just lost interest in playing. Throughout my life, I doodled here and there but didn't see art as a passion until the end of sophomore year and beginning junior year.</p>
+            <p>Was born and raised in the DMV for all of my life and thought I wanted to be a soccer player but then stuff happened. I had some injuries, and just lost interest in playing. Throughout my life, I doodled here and there but didn't see art as a passion until the end of sophomore year and beginning junior year.</p>
             <p>Art then became an outlet for me to express myself, and it just made me happy. That's when I realized that Art was something I wanted to pursue for the rest of my life. Now I'm a student at CIA just trying to get better at art and make people happy in any way I can.</p>
             <h3>KalabBumbaugh@gmail.com</h3>
         </section>
