added to shop and portfolio

--- a/shop.html
+++ b/shop.html
@@ -46,14 +46,20 @@
             <div class="shop-item">
                 <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u"><img src="img/work-62884939-active-t-shirt.jpg" alt="Art print of gettin ready Illustration "></a>
                 <h2>Ethiopia is Home active t-shirts</h2>
-                <p>Exersise in your very own Ethiopia is Home t-shirt</p>
+                <p>Exersise in your very own Ethiopia is Home t-shirt.</p>
                 <a href="https://www.redbubble.com/i/t-shirt/Home-by-KalabB/62884939.UGYPM?asc=u">Buy Now</a>
             </div>
             <div class="shop-item">
                 <a href="https://www.redbubble.com/i/magnet/Killer-Karp-by-KalabB/62894525.TBCTK?asc=u"><img src="img/work-62894525-magnet.jpg" alt="Magnet of Killer Karp"></a>
                 <h2>Killer Karp</h2>
-                <p>Spruce up your fridge with a Killer Karp Magnet</p>
+                <p>Spruce up your fridge with a Killer Karp Magnet.</p>
                 <a href="https://www.redbubble.com/i/magnet/Killer-Karp-by-KalabB/62894525.TBCTK?asc=u">Buy Now</a>
+            </div>
+            <div class="shop-item">
+                <a href="https://www.redbubble.com/i/t-shirt/Boombox-Boy-by-KalabB/63478357.IJ6L0?asc=u"><img src="img/work-63478357-classic-t-shirt.jpg" alt="Boombox Boy t-shirt"></a>
+                <h2>Boombox Boy</h2>
+                <p>Get a dope Boombox Boy T-shirt.</p>
+                <a href="https://www.redbubble.com/i/t-shirt/Boombox-Boy-by-KalabB/63478357.IJ6L0?asc=u">Buy Now</a>
             </div>
         </section>
     </main>
