--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,11 @@
             <div class="gallery-item h-2">
                 <a href="img/KalabBumbaughAnimPose6.png" class="glightbox"><img src="img/KalabBumbaughAnimPose6.png" alt="Final animation pose" title="Animation pose project #6" class="gallery-img"></a>
             </div>
-            <div class="gallery-item w-6">
+            <div class="gallery-item w-3">
                 <a href="img/KillerKarpNum2.png" class="glightbox"><img src="img/KillerKarpNum2.png" alt="Magikarp and killer Bee mix" title="Combination of Killer Bee from naruto and Magikarp from Pokemon" class="gallery-img"></a>
+            </div>
+            <div class="gallery-item w-3">
+                <a href="img/KalabBumbaughBoomboxBoyNB.png" class="glightbox"><img src="img/KalabBumbaughBoomboxBoyNB.png" alt="Boombox Boy Illustration" title="Illustration of Boombox Boy" class="gallery-img"></a>
             </div>
         </section>
     </main>
