Added new img to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,9 @@
             <div class="gallery-item w-3">
                 <a href="img/KalabBumbaughBoomboxBoyNB.png" class="glightbox"><img src="img/KalabBumbaughBoomboxBoyNB.png" alt="Boombox Boy Illustration" title="Illustration of Boombox Boy" class="gallery-img"></a>
             </div>
+            <div class="gallery-item w-6">
+                <a href="img/KalabBumbaughHolidaySelfPortrait.png" class="glightbox"><img src="img/KalabBumbaughHolidaySelfPortrait.png" alt="Self Portrait" title="Holiday Themed Self Portrait" class="gallery-img"></a>
+            </div>
         </section>
     </main>
 
