Additions plus some changes to website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h1 class="logo"><a href="index.html">Kalab Bumbaugh</a></h1>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
                 <li class="nav-item"><a href="shop.html">Shop</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
                 <li class="nav-item social-nav-item"><a href="https://twitter.com/Kalab_Bumbaugh" aria-label="Link to Twitter"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a></li>
@@ -35,6 +36,7 @@
         <nav class="nav-bar footer-nav">
             <ul class="nav-menu">
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
                 <li class="nav-item"><a href="shop.html">Shop</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
                 <li class="nav-item logo footer-logo"><a href="index.html">Kalab Bumbaugh</a></li>
